# awesome-deepseek-integration

./: README.md  README_cn.md  README_es.md  README_ja.md  README_zh_tw.md
docs/: podcast-digital-identity-ep14.md
docs/energy-optimizer/: BOM.md  Cargo.toml  README.md  config.example.toml
docs/energy-optimizer/firmware/: esp32_pzem_node.ino
docs/energy-optimizer/src/: audit.rs  config.rs  decision.rs  executor.rs  main.rs  sensor.rs  tariff.rs
docs/energy-optimizer/tauri/src/: App.tsx
docs/google-auth/: README.md
docs/google-oauth-web-server/: README.md
sovereign-stack/: EASTERN_FLANK.md  EXHIBIT_REGISTER.md  EXHIBIT_R_COPILOT.md  EXHIBIT_S_GOLDEN_NET.md  README.md  SOVEREIGN_GLITCH_MANIFESTO.md
