[package]
name = "energy-optimizer"
version = "0.1.0"
edition = "2021"
authors = ["Sovereign Home Energy Project"]
description = "Offline-first home energy optimizer with auditable action chain"

[[bin]]
name = "energy-optimizer"
path = "src/main.rs"

[dependencies]
# MQTT
rumqttc = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing for audit chain
sha2 = "0.10"
hex = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config file
toml = "0.8"

# GPIO control (Linux sysfs; swap for rppal on RPi)
sysfs_gpio = "0.6"

# Error handling
anyhow = "1"
thiserror = "1"

# Local persistent store
sled = "0.34"

# Signature / HMAC for audit records
hmac = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
